# pixi-install-to-prefix

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  pixi.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  scorecard.yml
docker-repro/: Dockerfile
docker-repro/pixi-install-to-prefix/: pixi.toml
docker-repro/test-env/: pixi.toml
examples/mirror-middleware/: README.md
examples/simple-python/: pixi.toml
src/: lib.rs  main.rs
test-env/: pixi.toml
tests/: integration_test.rs
tests/test-env/: pixi.toml
