[package]
name = "pixi-install-to-prefix"
description = "Install pixi environments to an arbitrary prefix"
version = "0.1.2"
edition = "2024"

# See https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[features]
default = ["native-tls"]
native-tls = [
  "reqwest/native-tls",
  "reqwest/native-tls-alpn",
  "rattler/native-tls",
  "rattler_networking/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "rattler/rustls-tls",
  "rattler_networking/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
rattler = { version = "0.34.2", default-features = false, features = [
  "indicatif",
] }
rattler_conda_types = "0.35.1"
rattler_config = { version = "0.1.0" }
rattler_lock = "0.23.6"
rattler_networking = { version = "0.25.1", default-features = false, features = [
  "rattler_config",
  "s3",
] }
rattler_package_streaming = { version = "0.22.40", default-features = false }
rattler_shell = "0.23.3"
reqwest = { version = "0.12.20", default-features = false, features = [
  "http2",
  "macos-system-configuration",
] }
reqwest-middleware = "0.4.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "default",
  "env-filter",
] }
url = "2.5.4"

[dev-dependencies]
rstest = "0.25.0"
assert_cmd = "2.0.17"
tempfile = "3.20.0"
