[package]
name = "pixi-install-to-prefix"
description = "Install pixi environments to an arbitrary prefix"
version = "0.1.5"
edition = "2024"

# See https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[features]
default = ["native-tls"]
native-tls = [
  "reqwest/native-tls",
  "rattler/native-tls",
  "rattler_networking/native-tls",
  "rattler_package_streaming/native-tls",
]
rustls-tls = [
  "reqwest/rustls",
  "rattler/rustls",
  "rattler_networking/rustls",
  "rattler_package_streaming/rustls",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
rattler = { version = "0.43.2", default-features = false, features = [
  "indicatif",
] }
rattler_conda_types = "0.46.4"
rattler_config = { version = "0.4.1" }
rattler_lock = "0.30.3"
rattler_networking = { version = "0.27.2", default-features = false, features = [
  "dirs",
  "rattler_config",
  "s3",
] }
rattler_package_streaming = { version = "0.26.2", default-features = false }
rattler_shell = "0.27.2"
reqwest = { version = "0.13.3", default-features = false, features = ["http2"] }
reqwest-middleware = { package = "astral-reqwest-middleware", version = "0.5.1" }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "default",
  "env-filter",
] }
url = "2.5.8"

[dev-dependencies]
rstest = "0.26.1"
assert_cmd = "2.2.2"
tempfile = "3.27.0"
